--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "dotenv": "^16.5.0",
     "hono": "^4.7.9",
     "postgres": "^3.4.5",
-    "uuid": "^11.1.0"
+    "uuid": "^11.1.0",
+    "vitest": "^3.1.3"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
