--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
   "dependencies": {
     "@hono/node-server": "^1.14.1",
     "bcrypt": "^6.0.0",
+    "better-sqlite3": "^12.2.0",
     "dotenv": "^16.5.0",
-    "hono": "^4.7.9",
+    "hono": "^4.9.7",
     "postgres": "^3.4.5",
     "uuid": "^11.1.0",
     "vitest": "^3.1.3"
