--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@hono/node-server": "^1.14.1",
+    "@types/better-sqlite3": "^7.6.13",
     "bcrypt": "^6.0.0",
     "better-sqlite3": "^12.2.0",
     "dotenv": "^16.5.0",
